--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
     <artifactId>jackson-dataformat-xml</artifactId>
     <version>2.15.2</version>
 </dependency>
+<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 
 
 	</dependencies>
